# mongodb-typegen

./: .coverage  GEMINI.md  README.md  main.py  pyproject.toml
src/mongodb_typegen/: cli.py
tests/: test_cli.py
